Adding functionality of huntFly
Update the first version of huntFly. This is implemented by the
synchronized method and a lock which will be incremented by one on any
threads which failed to catch the fly. This works fine with 2 instance
situation. This should not work on multiple(more than 2) players
scenerio.

Signed-off-by: Chen, Yiqun

--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,7 @@
 		value="server.policy"/>
 	</java>
 
+	<!-- 2 seconds delay for the game server to get ready -->
 	<sleep seconds="2" />
     	<parallel>
 	    <!-- start here one server and two clients -->
@@ -59,6 +60,15 @@
 		    value="file:${build}"/>
 		<sysproperty key="java.security.policy"
 		    value="client.policy"/>
+		<arg value="Chen"/>
+	    </java>
+	    <java classname="ClientBuild.GameClient" classpath="${build}" 
+		fork="true">
+		<sysproperty key="java.rmi.server.codebase"
+		    value="file:${build}"/>
+		<sysproperty key="java.security.policy"
+		    value="client.policy"/>
+		<arg value="Yu"/>
 	    </java>
     	</parallel>
     </target>
